--- a/client/bem_components/common/common.css
+++ b/client/bem_components/common/common.css
@@ -2,6 +2,38 @@
   padding: 0 !important;
   margin: 0 !important;
 }
+.flex {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: box;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -moz-box-orient: horizontal;
+  -o-box-orient: horizontal;
+  -webkit-flex-direction: row;
+  -ms-flex-direction: row;
+  flex-direction: row;
+  -webkit-box-lines: single;
+  -moz-box-lines: single;
+  -o-box-lines: single;
+  -webkit-flex-wrap: nowrap;
+  -ms-flex-wrap: nowrap;
+  flex-wrap: nowrap;
+  -webkit-box-pack: center;
+  -moz-box-pack: center;
+  -o-box-pack: center;
+  -ms-flex-pack: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -moz-box-align: center;
+  -o-box-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  align-items: center;
+}
 body {
   background: #fff;
   -webkit-font-smoothing: antialiased;
@@ -14,7 +46,8 @@ a:hover,
 a:active,
 a:focus {
   outline: none;
-  text-decoration: none;
+  color: #fff;
+  text-decoration: underline;
 }
 .container-fluid {
   background: #fff;
@@ -33,4 +66,5 @@ a:focus {
   height: auto;
   min-height: 1800px;
   margin: 0 auto;
+  padding: 25px;
 }
