content-block added

--- a/client/bem_components/header/header.styl
+++ b/client/bem_components/header/header.styl
@@ -177,6 +177,7 @@
 	background-color #FFF
 	margin 20px 0 0 0
 	text-align center
+	z-index 1
 	@media screen and (max-width:600px)
 		padding 20px 0
 	
