--- a/client/bem_components/labels/labels.css
+++ b/client/bem_components/labels/labels.css
@@ -1,4 +1,5 @@
-.labels {
+.labels-area .labels {
+  position: relative;
   width: 100%;
   height: auto;
   display: -webkit-box;
@@ -31,8 +32,9 @@
   -ms-flex-align: center;
   -webkit-align-items: center;
   align-items: center;
+  z-index: 3;
 }
-.labels__item {
+.labels-area .labels__item {
   height: 150px;
   width: 33.3333%;
   background-color: #454c52;
@@ -69,37 +71,37 @@
   padding: 20px;
 }
 @media screen and (max-width: 768px) {
-  .labels__item {
+  .labels-area .labels__item {
     width: 100%;
     padding: 10px;
   }
 }
-.labels__item--active {
+.labels-area .labels__item--active {
   background-color: #3b4147;
 }
-.shield {
+.labels-area .shield {
   background-position: center;
   background-repeat: no-repeat;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   background-size: cover;
 }
-.shield--speed {
+.labels-area .shield--speed {
   width: 85px;
   height: 68px;
   background-image: url("./img/speed.png");
 }
-.shield--protect {
+.labels-area .shield--protect {
   width: 56px;
   height: 63px;
   background-image: url("./img/protect.png");
 }
-.shield--medal {
+.labels-area .shield--medal {
   width: 52px;
   height: 77px;
   background-image: url("./img/medal.png");
 }
-.label-container {
+.labels-area .label-container {
   height: 100%;
   display: -webkit-box;
   display: -moz-box;
@@ -120,7 +122,7 @@
   -ms-flex-wrap: nowrap;
   flex-wrap: nowrap;
 }
-.label-container--shield {
+.labels-area .label-container--shield {
   width: 40%;
   -webkit-box-pack: center;
   -moz-box-pack: center;
@@ -135,7 +137,7 @@
   -webkit-align-items: center;
   align-items: center;
 }
-.label-container--text {
+.labels-area .label-container--text {
   width: 60%;
   color: #fff;
   -webkit-box-pack: start;
@@ -152,22 +154,22 @@
   align-items: center;
   padding: 10px;
 }
-.labels__title {
+.labels-area .labels__title {
   text-transform: uppercase;
   font-size: 1.8rem;
   font-weight: 900;
 }
 @media screen and (max-width: 992px) {
-  .labels__title {
+  .labels-area .labels__title {
     font-size: 1.3rem;
   }
 }
-.labels__subtitle {
+.labels-area .labels__subtitle {
   font-size: 1.6rem;
   font-weight: 300;
 }
 @media screen and (max-width: 992px) {
-  .labels__subtitle {
+  .labels-area .labels__subtitle {
     font-size: 1.2rem;
   }
 }
