--- a/client/bem_components/slider/slider.css
+++ b/client/bem_components/slider/slider.css
@@ -1,7 +1,9 @@
 .slider-area .slider {
+  position: relative;
   width: 100%;
   height: auto;
   background-color: #56595e;
+  z-index: 2;
 }
 @media screen and (max-width: 600px) {
   .slider-area .slider {
