--- a/client/bem_components/common/common.css
+++ b/client/bem_components/common/common.css
@@ -34,6 +34,26 @@
   -webkit-align-items: center;
   align-items: center;
 }
+.paper-shadow-z1 {
+  -webkit-box-shadow: 0 1px 6px rgba(0,0,0,0.12), 0 1px 4px rgba(0,0,0,0.12) !important;
+  box-shadow: 0 1px 6px rgba(0,0,0,0.12), 0 1px 4px rgba(0,0,0,0.12) !important;
+}
+.paper-shadow-z2 {
+  -webkit-box-shadow: 0 3px 10px rgba(0,0,0,0.16), 0 3px 10px rgba(0,0,0,0.23) !important;
+  box-shadow: 0 3px 10px rgba(0,0,0,0.16), 0 3px 10px rgba(0,0,0,0.23) !important;
+}
+.paper-shadow-z3 {
+  -webkit-box-shadow: 0 10px 30px rgba(0,0,0,0.19), 0 6px 10px rgba(0,0,0,0.23) !important;
+  box-shadow: 0 10px 30px rgba(0,0,0,0.19), 0 6px 10px rgba(0,0,0,0.23) !important;
+}
+.paper-shadow-z4 {
+  -webkit-box-shadow: 0 14px 45px rgba(0,0,0,0.25), 0 10px 18px rgba(0,0,0,0.22) !important;
+  box-shadow: 0 14px 45px rgba(0,0,0,0.25), 0 10px 18px rgba(0,0,0,0.22) !important;
+}
+.paper-shadow-z5 {
+  -webkit-box-shadow: 0 19px 60px rgba(0,0,0,0.3), 0 15px 20px rgba(0,0,0,0.22) !important;
+  box-shadow: 0 19px 60px rgba(0,0,0,0.3), 0 15px 20px rgba(0,0,0,0.22) !important;
+}
 body {
   background: #fff;
   -webkit-font-smoothing: antialiased;
