--- a/client/bem_components/header/header.css
+++ b/client/bem_components/header/header.css
@@ -267,6 +267,7 @@
   background-color: #fff;
   margin: 20px 0 0 0;
   text-align: center;
+  z-index: 1;
 }
 @media screen and (max-width: 600px) {
   .menu-area .menu {
