--- a/client/bem_components/slider/slider.styl
+++ b/client/bem_components/slider/slider.styl
@@ -1,9 +1,11 @@
 @import 'nib'
 
 .slider-area .slider
+	position relative
 	width 100%
 	height auto
 	background-color #56595e
+	z-index 2
 	@media screen and (max-width:600px)
 		display none
 	
