--- a/client/bem_components/footer/footer.styl
+++ b/client/bem_components/footer/footer.styl
@@ -1,1 +1,98 @@
 @import 'nib'
+
+.footer-area
+	margin 30px 0
+	
+.footer-area .footer-menu__item
+	font-size 1.3rem
+	font-weight 900
+	text-transform uppercase
+	letter-spacing 1px
+	margin-bottom 20px
+	display block
+	transition all .2s ease-in-out
+	&:hover
+		color #46ebd6
+	@media screen and (max-width:992px)
+		text-align center
+		text-shadow 0 0 1px #333
+	@media screen and (max-width:600px)
+		font-size 1rem
+	
+.footer-area .contacts__text
+	color #FFF
+	font-weight 300
+	transition all .2s ease-in-out
+	@media screen and (max-width:992px)
+		text-align center
+		margin 20px 0 0 0
+	@media screen and (max-width:600px)
+		font-size 1.2rem!important
+		display block
+		text-align center
+		margin 3px 0
+	
+.footer-area .contacts__text--bold
+	font-weight 900
+	
+.footer-area .contacts__text--phone
+	font-size 2rem
+	
+.footer-area .contacts__note
+	color #FFF
+	font-weight 100
+	font-size 1.4rem
+	margin 25px 0
+	@media screen and (max-width:992px)
+		text-align center
+		margin 10px 0
+		
+.footer-area .vk-vidget
+	display flex
+	flex-direction row
+	flex-wrap nowrap
+	justify-content center
+	@media screen and (max-width:992px)
+		margin 20px 0 30px 0
+		
+.footer-area .vk-vidget iframe
+	border-radius 4px!important
+	
+.footer-area .divider
+	height 2px
+	width 100%
+	border-top 2px solid #FFF
+	margin 20px 0
+	
+.footer-area .copyright
+	color #FFF
+	font-size 1.5rem
+	font-weight 300
+	@media screen and (max-width:600px)
+		font-size 1rem
+	
+.footer-area .logo__pic
+	width 115px
+	height 21px
+	background-image url(./img/logo.png)
+	background-position center
+	background-repeat no-repeat
+	background-size cover
+	@media screen and (max-width:600px)
+		width 76.6px
+		height 14px
+	
+.footer-area .logo
+	display flex
+	flex-direction row
+	flex-wrap nowrap
+	justify-content flex-end
+	
+	
+	
+	
+	
+	
+	
+	
+	
