--- a/client/bem_components/labels/labels.styl
+++ b/client/bem_components/labels/labels.styl
@@ -70,12 +70,15 @@
 	text-transform uppercase
 	font-size 1.8rem
 	font-weight 900
+	letter-spacing 1px
 	@media screen and (max-width:992px)
 		font-size 1.3rem
 	
 .labels-area .labels__subtitle
 	font-size 1.6rem
 	font-weight 300
+	line-height 1
+	margin 10px 0
 	@media screen and (max-width:992px)
 		font-size 1.2rem
 	
