--- a/client/bem_components/category-head/category-head.styl
+++ b/client/bem_components/category-head/category-head.styl
@@ -24,8 +24,8 @@
 	padding 10px 30px
 	user-select none
 	@media screen and (max-width:600px)
-		font-size 1.2rem
-		padding 10px 10px
+		font-size 1.1rem
+		padding 10px
 		
 .category-head-area .category-controls
 	position absolute
@@ -39,7 +39,7 @@
 	justify-content center
 	align-items center
 	@media screen and (max-width:600px)
-		bottom 41px
+		bottom 40px
 	
 .category-head-area .category-controls__btn
 	width 40px
