--- a/client/bem_components/labels/labels.styl
+++ b/client/bem_components/labels/labels.styl
@@ -10,6 +10,8 @@
 	justify-content center
 	align-items center
 	z-index 3
+	@media screen and (max-width:768px)
+		display none
 	
 .labels-area .labels__item
 	height 150px
