--- a/client/bem_components/header/header.css
+++ b/client/bem_components/header/header.css
@@ -259,6 +259,11 @@
 .header-main-area .social__link--mail {
   top: -1px;
 }
+@media screen and (max-width: 600px) {
+  .menu-area .menu--desktop {
+    display: none;
+  }
+}
 .menu-area .menu {
   position: relative;
   width: 100%;
@@ -317,4 +322,106 @@
   -o-transition: all 0.2s ease-in-out;
   -ms-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
+}
+.menu--mobile__btn {
+  width: 30px;
+  height: 30px;
+  position: fixed;
+  top: 10px;
+  left: 10px;
+  z-index: 99;
+  cursor: pointer;
+  background-color: #48c9b8;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+.menu--mobile__icon {
+  color: #fff;
+  position: absolute;
+  top: 4px;
+  left: 3px;
+}
+.menu--mobile__overlay {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #000;
+  z-index: 97;
+  opacity: 0.8;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=80)";
+  filter: alpha(opacity=80);
+}
+.menu--mobile__content {
+  position: fixed;
+  top: 0;
+  left: 0;
+  -webkit-transform: translateX(-180px);
+  -moz-transform: translateX(-180px);
+  -o-transform: translateX(-180px);
+  -ms-transform: translateX(-180px);
+  transform: translateX(-180px);
+  width: 180px;
+  height: 100%;
+  z-index: 98;
+  -webkit-transition: all 0.2s ease-in-out;
+  -moz-transition: all 0.2s ease-in-out;
+  -o-transition: all 0.2s ease-in-out;
+  -ms-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+  background-color: #48c9b8;
+  overflow: auto;
+}
+.menu-list {
+  width: 100%;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  text-align: left;
+  font-weight: 300;
+  height: 100%;
+}
+.list__item {
+  padding: 20px 10px 20px 20px;
+  width: 100%;
+  cursor: pointer;
+  color: #fff;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  font-size: 1.2rem;
+  -webkit-transition: all 0.2s ease-in-out;
+  -moz-transition: all 0.2s ease-in-out;
+  -o-transition: all 0.2s ease-in-out;
+  -ms-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+}
+.list__item:hover {
+  background-color: #4db6ac;
+}
+.menu-divider {
+  width: 100%;
+  height: 1px;
+  border-top: 1px solid #80cbc4;
+}
+.menu-link--mobile,
+.menu-link--mobile:hover,
+.menu-link--mobile:focus,
+.menu-link--mobile:active {
+  text-decoration: none;
+}
+.menu-margin {
+  width: 100%;
+  height: 50px;
+}
+.menu--mobile {
+  display: none;
+}
+@media screen and (max-width: 600px) {
+  .menu--mobile {
+    display: block;
+  }
 }
