--- a/client/bem_components/header/header.styl
+++ b/client/bem_components/header/header.styl
@@ -169,6 +169,10 @@
 .header-main-area .social__link--mail
 	top -1px
 	
+.menu-area .menu--desktop
+	@media screen and (max-width:600px)
+		display none
+	
 .menu-area .menu
 	position relative
 	width 100%
@@ -199,6 +203,90 @@
 	&:hover .menu__item
 		color #FFF
 		transition all .2s ease-in-out
+		
+		
+.menu--mobile__btn
+	width 30px
+	height 30px
+	position fixed
+	top 10px
+	left 10px
+	z-index 99
+	cursor pointer
+	background-color #48c9b8
+	user-select none
+		
+.menu--mobile__icon
+	color #FFF
+	position absolute
+	top 4px
+	left 3px
+	
+.menu--mobile__overlay
+	display none
+	position fixed
+	top 0
+	left 0
+	width 100%
+	height 100%
+	background-color #000
+	z-index 97
+	opacity .8
+	
+.menu--mobile__content
+	position fixed
+	top 0
+	left 0
+	transform translateX(-180px)
+	width 180px
+	height 100%
+	z-index 98
+	transition all .2s ease-in-out
+	background-color #48c9b8
+	overflow auto
+	
+.menu-list
+	width 100%
+	list-style-type none
+	margin 0
+	padding 0
+	text-align left
+	font-weight 300
+	height 100%
+	
+.list__item
+	padding 20px 10px 20px 20px
+	width 100%
+	cursor pointer
+	color #FFF
+	text-transform uppercase
+	letter-spacing 1px
+	font-size 1.2rem
+	transition all .2s ease-in-out
+	&:hover
+		background-color #4DB6AC
+			
+.menu-divider
+	width 100%
+	height 1px
+	border-top 1px solid #80CBC4
+	
+
+.menu-link--mobile, 
+.menu-link--mobile:hover, 
+.menu-link--mobile:focus, 
+.menu-link--mobile:active
+	text-decoration none
+	
+.menu-margin
+	width 100%
+	height 50px
+	
+.menu--mobile
+	display none
+	@media screen and (max-width:600px)
+		display block
+		
 	
 	
 	
