--- a/client/bem_components/main-content/main-content.styl
+++ b/client/bem_components/main-content/main-content.styl
@@ -83,6 +83,64 @@
 .main-content-area .card__link:active
 	text-decoration none
 	
+.main-content-area .card-description
+	margin 20px 0
+	min-height 150px
+	max-height 10rem
+	overflow hidden
+	
+.main-content-area .card-description__title
+	color #000
+	text-align center
+	text-transform uppercase
+	font-size 1.5rem
+	font-weight 900
+	margin 5px 0
+	
+.main-content-area .card-description__row
+	color #000
+	text-align center
+	font-size 1.4rem
+	font-weight 300
+	padding 20px
+	
+.main-content-area .card-price
+	margin-top -15px
+	line-height 0
+	
+.main-content-area .rub-symbol
+	font-family 'PT Sans', serif
+	
+.main-content-area .content-divider
+	width calc(100% - 20px)
+	height 1px
+	border-top 1px solid #e5e5e5
+	margin 0 auto
+	
+.main-content-area .text-content__title
+	text-align center
+	text-transform uppercase
+	font-size 2.8rem
+	font-weight 900
+	margin-bottom 20px
+	@media screen and (max-width:600px)
+		font-size 2rem
+		margin 20px 0
+	
+.main-content-area .title-border
+	border-bottom 1px solid #000
+	letter-spacing 1px
+	
+.main-content-area .text-content
+	padding 70px 60px
+	@media screen and (max-width:600px)
+		padding 10px
+	
+.main-content-area .text-content__description
+	font-size 1.8rem
+	font-weight 300
+	@media screen and (max-width:600px)
+		font-size 1.2rem
 
 	
 	
