--- a/client/bem_components/header/header.css
+++ b/client/bem_components/header/header.css
@@ -268,43 +268,62 @@
   position: relative;
   width: 100%;
   height: auto;
-  min-height: 55px;
   background-color: #fff;
   margin: 20px 0 0 0;
   text-align: center;
   z-index: 1;
-}
-@media screen and (max-width: 600px) {
-  .menu-area .menu {
-    padding: 20px 0;
-  }
+  display: -webkit-box;
+  display: -moz-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: box;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -moz-box-orient: horizontal;
+  -o-box-orient: horizontal;
+  -webkit-flex-direction: row;
+  -ms-flex-direction: row;
+  flex-direction: row;
+  -webkit-box-lines: multiple;
+  -moz-box-lines: multiple;
+  -o-box-lines: multiple;
+  -webkit-flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  -webkit-box-pack: center;
+  -moz-box-pack: center;
+  -o-box-pack: center;
+  -ms-flex-pack: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -moz-box-align: center;
+  -o-box-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  align-items: center;
 }
 .menu-area .menu-link,
 .menu-area .menu-link:hover,
 .menu-area .menu-link:active,
 .menu-area .menu-link:focus {
+  -webkit-box-flex: 1;
+  -moz-box-flex: 1;
+  -o-box-flex: 1;
+  -ms-box-flex: 1;
+  box-flex: 1;
+  -webkit-flex-grow: 1;
+  flex-grow: 1;
   color: #000;
   text-decoration: none;
   text-transform: uppercase;
   font-weight: 900;
   padding: 20px 30px;
-  display: inline-block;
   -webkit-transition: all 0.2s ease-in-out;
   -moz-transition: all 0.2s ease-in-out;
   -o-transition: all 0.2s ease-in-out;
   -ms-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
-  margin-left: -4px;
-}
-@media screen and (max-width: 600px) {
-  .menu-area .menu-link,
-  .menu-area .menu-link:hover,
-  .menu-area .menu-link:active,
-  .menu-area .menu-link:focus {
-    display: block;
-    padding: 10px 30px;
-    margin-left: 0px;
-  }
 }
 .menu-area .menu-link:hover,
 .menu-area .menu-link:hover:hover,
@@ -424,4 +443,42 @@
   .menu--mobile {
     display: block;
   }
+}
+.menu-area .logentry {
+  background-color: #39393d;
+  padding: 10px 25px;
+  color: #fff;
+  text-align: left;
+}
+.menu-area .logentry__link {
+  -webkit-transition: all 0.2s ease-in-out;
+  -moz-transition: all 0.2s ease-in-out;
+  -o-transition: all 0.2s ease-in-out;
+  -ms-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+}
+.menu-area .logentry__link:hover {
+  color: #59c9ba;
+}
+.menu-area .logentry__email {
+  font-size: 1.3rem;
+  font-weight: 300;
+  display: inline-block;
+}
+.menu-area .logout {
+  font-size: 1.3rem;
+  font-weight: 300;
+  color: #8a8a90;
+  display: inline-block;
+}
+.menu-area .logout__link,
+.menu-area .logout__link:hover,
+.menu-area .logout__link:focus,
+.menu-area .logout__link:active {
+  color: #8a8a90;
+}
+.menu-area .person-icon {
+  font-size: 1.5rem;
+  position: relative;
+  top: 2px;
 }
