--- a/client/bem_components/header/header.styl
+++ b/client/bem_components/header/header.styl
@@ -177,27 +177,28 @@
 	position relative
 	width 100%
 	height auto
-	min-height 55px
 	background-color #FFF
 	margin 20px 0 0 0
 	text-align center
 	z-index 1
-	@media screen and (max-width:600px)
-		padding 20px 0
+	display flex
+	flex-direction row
+	flex-wrap wrap
+	justify-content center
+	align-items center
+
 	
-.menu-area .menu-link, .menu-area .menu-link:hover, .menu-area .menu-link:active, .menu-area .menu-link:focus
+.menu-area .menu-link, 
+.menu-area .menu-link:hover, 
+.menu-area .menu-link:active, 
+.menu-area .menu-link:focus
+	flex-grow 1
 	color #000
 	text-decoration none
 	text-transform uppercase
 	font-weight 900
 	padding 20px 30px
-	display inline-block
 	transition all .2s ease-in-out
-	margin-left -4px
-	@media screen and (max-width:600px)
-		display block
-		padding 10px 30px
-		margin-left 0px
 	&:hover
 		background-color #48c9b8
 	&:hover .menu__item
@@ -271,7 +272,6 @@
 	height 1px
 	border-top 1px solid #80CBC4
 	
-
 .menu-link--mobile, 
 .menu-link--mobile:hover, 
 .menu-link--mobile:focus, 
@@ -286,6 +286,40 @@
 	display none
 	@media screen and (max-width:600px)
 		display block
+		
+		
+.menu-area .logentry
+	background-color #39393d
+	padding 10px 25px
+	color #FFF
+	text-align left
+	
+.menu-area .logentry__link
+	transition all .2s ease-in-out
+	&:hover
+		color #59c9ba
+		
+.menu-area .logentry__email
+	font-size 1.3rem
+	font-weight 300
+	display inline-block
+	
+.menu-area .logout
+	font-size 1.3rem
+	font-weight 300
+	color #8a8a90
+	display inline-block
+	
+.menu-area .logout__link,
+.menu-area .logout__link:hover, 
+.menu-area .logout__link:focus, 
+.menu-area .logout__link:active
+	color #8a8a90
+	
+.menu-area .person-icon
+	font-size 1.5rem
+	position relative
+	top 2px
 		
 	
 	
