product-page added

--- a/client/bem_components/common/common.styl
+++ b/client/bem_components/common/common.styl
@@ -28,6 +28,12 @@ $bg-color = #FFF;
 .paper-shadow-z5
 	box-shadow 0 19px 60px rgba(0,0,0,0.3), 0 15px 20px rgba(0,0,0,0.22)!important
 	
+::selection
+	background #80CBC4
+	
+::-moz-selection
+	background #80CBC4
+
 body
 	background $bg-color
 	font-smoothing antialiased
