--- a/client/bem_components/category-head/category-head.css
+++ b/client/bem_components/category-head/category-head.css
@@ -23,12 +23,12 @@
   -webkit-flex-wrap: nowrap;
   -ms-flex-wrap: nowrap;
   flex-wrap: nowrap;
-  -webkit-box-pack: center;
-  -moz-box-pack: center;
-  -o-box-pack: center;
-  -ms-flex-pack: center;
-  -webkit-justify-content: center;
-  justify-content: center;
+  -webkit-box-pack: start;
+  -moz-box-pack: start;
+  -o-box-pack: start;
+  -ms-flex-pack: start;
+  -webkit-justify-content: flex-start;
+  justify-content: flex-start;
   -webkit-box-align: center;
   -moz-box-align: center;
   -o-box-align: center;
@@ -39,11 +39,17 @@
 @media screen and (max-width: 600px) {
   .category-head-area .category-head {
     min-height: 120px;
+    -webkit-box-lines: multiple;
+    -moz-box-lines: multiple;
+    -o-box-lines: multiple;
+    -webkit-flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
   }
 }
 .category-head-area .category-head__title {
   position: relative;
-  font-size: 3.3rem;
+  font-size: 1.8rem;
   font-weight: 900;
   color: #000;
   text-transform: uppercase;
@@ -55,37 +61,19 @@
   user-select: none;
   background-color: #fff;
   z-index: 5;
-}
-@media screen and (max-width: 992px) {
-  .category-head-area .category-head__title {
-    font-size: 2rem;
-  }
+  margin: 20px;
 }
 @media screen and (max-width: 600px) {
   .category-head-area .category-head__title {
-    font-size: 1.1rem;
+    font-size: 1.3rem;
     padding: 10px;
   }
 }
-.category-head-area .category-head__title--less-font {
-  font-size: 3rem;
-}
-@media screen and (max-width: 992px) {
-  .category-head-area .category-head__title--less-font {
-    font-size: 2rem;
-  }
-}
-@media screen and (max-width: 600px) {
-  .category-head-area .category-head__title--less-font {
-    font-size: 1rem;
-  }
-}
 .category-head-area .category-controls {
-  position: absolute;
-  bottom: 65px;
-  left: 0;
+  position: relative;
   width: auto;
   height: 40px;
+  background-color: #f4f4f4;
   display: -webkit-box;
   display: -moz-box;
   display: -webkit-flex;
@@ -116,49 +104,13 @@
   -ms-flex-align: center;
   -webkit-align-items: center;
   align-items: center;
-  background-color: #f4f4f4;
-}
-@media screen and (max-width: 600px) {
-  .category-head-area .category-controls {
-    bottom: 80px;
-  }
+  margin: 20px 0;
 }
 .category-head-area .category-controls__btn {
-  position: relative;
   width: 40px;
   height: 40px;
   background-color: #fff;
   cursor: pointer;
-  display: -webkit-box;
-  display: -moz-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: box;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -moz-box-orient: horizontal;
-  -o-box-orient: horizontal;
-  -webkit-flex-direction: row;
-  -ms-flex-direction: row;
-  flex-direction: row;
-  -webkit-box-lines: single;
-  -moz-box-lines: single;
-  -o-box-lines: single;
-  -webkit-flex-wrap: nowrap;
-  -ms-flex-wrap: nowrap;
-  flex-wrap: nowrap;
-  -webkit-box-pack: center;
-  -moz-box-pack: center;
-  -o-box-pack: center;
-  -ms-flex-pack: center;
-  -webkit-justify-content: center;
-  justify-content: center;
-  -webkit-box-align: center;
-  -moz-box-align: center;
-  -o-box-align: center;
-  -ms-flex-align: center;
-  -webkit-align-items: center;
-  align-items: center;
   text-decoration: none !important;
   -webkit-transition: all 0.2s ease-in-out;
   -moz-transition: all 0.2s ease-in-out;
@@ -174,15 +126,18 @@
   -o-transition: all 0.2s ease-in-out;
   -ms-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
+  position: relative;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -o-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
 }
 .category-head-area .category-row {
   text-transform: uppercase;
   margin: 0 20px;
   font-size: 1.3rem;
   font-weight: 900;
-}
-@media screen and (max-width: 992px) {
-  .category-head-area .category-row {
-    display: none;
-  }
 }
