--- a/client/bem_components/category-head/category-head.styl
+++ b/client/bem_components/category-head/category-head.styl
@@ -10,14 +10,15 @@
 	display flex
 	flex-direction row
 	flex-wrap nowrap
-	justify-content center
+	justify-content flex-start
 	align-items center
 	@media screen and (max-width:600px)
 		min-height 120px
+		flex-wrap wrap
 	
 .category-head-area .category-head__title
 	position relative
-	font-size 3.3rem
+	font-size 1.8rem
 	font-weight 900
 	color #000
 	text-transform uppercase
@@ -26,45 +27,29 @@
 	user-select none
 	background-color #FFF
 	z-index 5
-	@media screen and (max-width:992px)
-		font-size 2rem
+	margin 20px
 	@media screen and (max-width:600px)
-		font-size 1.1rem
+		font-size 1.3rem
 		padding 10px
-		
-.category-head-area .category-head__title--less-font
-	font-size 3rem
-	@media screen and (max-width:992px)
-		font-size 2rem
-	@media screen and (max-width:600px)
-		font-size 1rem
+
 		
 .category-head-area .category-controls
-	position absolute
-	bottom 65px
-	left  0
+	position relative
 	width auto
 	height 40px
+	background-color #f4f4f4
 	display flex
 	flex-direction row
 	flex-wrap nowrap
 	justify-content center
 	align-items center
-	background-color #f4f4f4
-	@media screen and (max-width:600px)
-		bottom 80px
+	margin 20px 0
 	
 .category-head-area .category-controls__btn
-	position relative
 	width 40px
 	height 40px
 	background-color #FFF
 	cursor pointer
-	display flex
-	flex-direction row
-	flex-wrap nowrap
-	justify-content center
-	align-items center
 	text-decoration none!important
 	transition all .2s ease-in-out
 	background-color #48c9b8
@@ -72,14 +57,16 @@
 .category-head-area .category-icon
 	color #FFF
 	transition all .2s ease-in-out
+	position relative
+	top 50%
+	left 50%
+	transform translate(-50%, -50%)
 	
 .category-head-area .category-row
 	text-transform uppercase
 	margin 0 20px
 	font-size 1.3rem
 	font-weight 900
-	@media screen and (max-width:992px)
-		display none
 	
 	
 	
