--- a/client/bem_components/common/common.css
+++ b/client/bem_components/common/common.css
@@ -54,6 +54,12 @@
   -webkit-box-shadow: 0 19px 60px rgba(0,0,0,0.3), 0 15px 20px rgba(0,0,0,0.22) !important;
   box-shadow: 0 19px 60px rgba(0,0,0,0.3), 0 15px 20px rgba(0,0,0,0.22) !important;
 }
+::selection {
+  background: #80cbc4;
+}
+::-moz-selection {
+  background: #80cbc4;
+}
 body {
   background: #fff;
   -webkit-font-smoothing: antialiased;
