--- a/client/bem_components/header/header.css
+++ b/client/bem_components/header/header.css
@@ -259,7 +259,7 @@
 .header-main-area .social__link--mail {
   top: -1px;
 }
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 992px) {
   .menu-area .menu--desktop {
     display: none;
   }
@@ -358,9 +358,14 @@
 }
 .menu--mobile__icon {
   color: #fff;
-  position: absolute;
-  top: 4px;
-  left: 3px;
+  position: relative;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -o-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
 }
 .menu--mobile__overlay {
   display: none;
@@ -439,7 +444,7 @@
 .menu--mobile {
   display: none;
 }
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 992px) {
   .menu--mobile {
     display: block;
   }
