--- a/client/bem_components/main-content/main-content.styl
+++ b/client/bem_components/main-content/main-content.styl
@@ -234,6 +234,31 @@
 	
 	
 	
+.discount__title
+	text-transform uppercase
+	font-weight 900 
+	
+.discount__percent
+	font-size 2.2rem
+	font-weight 500
+	margin 0 15px
+	
+.clarification
+	color #48c9b8
+	font-size 1.4rem
+	font-weight 900
+	border-bottom 1px dashed #48c9b8
+	text-transform uppercase
+	cursor pointer
+	line-height 2.5
+	
+.discount__text
+	font-size 1.4rem
+	font-weight 300
+	margin 30px 0
+	color #7c7c7c
+	
+	
 	
 	
 	
