--- a/client/bem_components/main-content/main-content.styl
+++ b/client/bem_components/main-content/main-content.styl
@@ -108,7 +108,7 @@
 	
 .main-content-area .card-price
 	line-height 0
-	transform translateY(-15px)
+	transform translateY(-22px)
 	
 .main-content-area .rub
 	display inline-block
@@ -188,9 +188,13 @@
 	
 .product-description--left
 	padding 0 20px 0 40px!important
+	@media screen and (max-width:992px)
+		padding 20px!important
 	
 .product-description--right
 	padding 0 40px 0 20px!important
+	@media screen and (max-width:992px)
+		padding 20px!important
 	
 .product-description__price
 	font-size 4rem
@@ -198,6 +202,8 @@
 	color #48c9b8
 	line-height 1
 	text-align right
+	@media screen and (max-width:992px)
+		text-align center
 	
 .main-content-area .rub--big
 	line-height 12px
@@ -232,8 +238,6 @@
 .form-group--margin
 	margin 30px 0
 	
-	
-	
 .discount__title
 	text-transform uppercase
 	font-weight 900 
@@ -258,17 +262,97 @@
 	margin 30px 0
 	color #7c7c7c
 	
+.sum
+	margin 20px 0
 	
+.sum__title
+	text-transform uppercase
+	font-weight 900
 	
+.sum__price--old
+	display inline-block
+	font-size 2.2rem
+	margin 0 20px
 	
+.strike
+	position relative
+	top 17px
+	display block
+	height 2px
+	width 100%
+	border-top 2px solid #48c9b8
 	
+.sum__price--new
+	font-size 3.7rem
+	font-weight 700
 	
+.comment-box
+	margin 20px 0
 	
+.comment-box__title
+	text-transform uppercase
+	font-weight 900
 	
+.comment-box__textarea
+	width 100%
+	height 170px
+	resize none
+	transition all .2s ease-in-out
+	border 1px solid #ccc
+	border-radius 5px
+	padding 10px
+	&:focus
+		border 1px solid #48c9b8
+		
+.confirm
+	margin 20px 0
+	
+.confirm__btn
+	margin 10px 0
+	background-image linear-gradient(180deg, #53d2c3, #3ec1ae)
+	color #FFF
+	text-transform uppercase
+	font-size 2rem
+	font-weight 900
+	padding 15px 40px
+	&:hover
+		color #FFF
+	&:focus
+		color #FFF
+	&:active
+		color #FFF
+	outline none
+	text-shadow 0 0 2px #888
+	letter-spacing 1px
+	
+.btn-area
+	text-align right
+	@media screen and (max-width:992px)
+		text-align center
 	
 		
-		
+.confirm__title
+	font-size 1.6rem
+	font-weight 500
+	margin 10px 0
+	display block
+	line-height 1
+	
 
+.checkbox-slider--b-flat input:checked + span::after
+	margin-top 7px
+	
+.checkbox-slider--b-flat input + span::after
+	margin 7px 0 0 0
+
+	
+	
+	
+	
+	
+	
+	
+	
 
 	
 	
