--- a/client/bem_components/main-content/main-content.styl
+++ b/client/bem_components/main-content/main-content.styl
@@ -218,22 +218,10 @@
 	box-shadow none!important
 	border-color #48c9b8!important
 	
-.circle-question
-	display inline-block
-	width 15px
-	height 15px
-	background-color #48c9b8
-	border-radius 50%
-	position relative
-	top -3px
+.question-circle-icon
+	color #48c9b8
+	transform translateY(-5px)
 	cursor pointer
-	
-.circle-question__icon
-	color #FFF
-	position relative
-	top -2px
-	right 5px
-	font-weight 400
 	
 .form-group--margin
 	margin 30px 0
