--- a/client/bem_components/main-content/main-content.css
+++ b/client/bem_components/main-content/main-content.css
@@ -296,23 +296,14 @@
   box-shadow: none !important;
   border-color: #48c9b8 !important;
 }
-.circle-question {
-  display: inline-block;
-  width: 15px;
-  height: 15px;
-  background-color: #48c9b8;
-  -webkit-border-radius: 50%;
-  border-radius: 50%;
-  position: relative;
-  top: -3px;
+.question-circle-icon {
+  color: #48c9b8;
+  -webkit-transform: translateY(-5px);
+  -moz-transform: translateY(-5px);
+  -o-transform: translateY(-5px);
+  -ms-transform: translateY(-5px);
+  transform: translateY(-5px);
   cursor: pointer;
-}
-.circle-question__icon {
-  color: #fff;
-  position: relative;
-  top: -2px;
-  right: 5px;
-  font-weight: 400;
 }
 .form-group--margin {
   margin: 30px 0;
