--- a/client/bem_components/category-head/category-head.styl
+++ b/client/bem_components/category-head/category-head.styl
@@ -18,7 +18,7 @@
 	
 .category-head-area .category-head__title
 	position relative
-	font-size 1.8rem
+	font-size 3.3rem
 	font-weight 900
 	color #000
 	text-transform uppercase
@@ -28,9 +28,16 @@
 	background-color #FFF
 	z-index 5
 	margin 20px
-	@media screen and (max-width:600px)
+	@media screen and (max-width:768px)
 		font-size 1.3rem
 		padding 10px
+		
+.category-head-area .category-head__title--small
+	font-size 1.9rem
+	@media screen and (max-width:768px)
+		font-size 1.3rem
+		padding 10px
+	
 
 		
 .category-head-area .category-controls
