--- a/client/bem_components/header/header.styl
+++ b/client/bem_components/header/header.styl
@@ -42,31 +42,30 @@
 	background-repeat no-repeat
 	background-size cover
 	display inline-block
-	transition all .2s ease-in-out
 	@media screen and (max-width:600px)
 		display block
 		margin 0 auto
 	
 .header-main-area .contacts__icon--phone
 	top 3px
-	width 21px
-	height 21px
+	width 19px
+	height 19px
 	background-image url(./img/icons/phone.png)
 	@media screen and (max-width:600px)
 		top 0
 		
 .header-main-area .contacts__icon--skype
 	top 3px
-	width 21px
-	height 23px
+	width 18px
+	height 20px
 	background-image url(./img/icons/skype.png)
 	@media screen and (max-width:600px)
 		top 0
 	
 .header-main-area .contacts__icon--chat
-	top -5px
-	width 21px
-	height 20px
+	top -8px
+	width 19px
+	height 18px
 	background-image url(./img/icons/chat.png)
 	@media screen and (max-width:600px)
 		top 0
@@ -76,18 +75,19 @@
 	display inline-block
 	font-weight 300
 	line-height 1
-	transition all .2s ease-in-out
 	@media screen and (max-width:600px)
 		font-size 1.2rem!important
 		display block
 		text-align center
-		margin 3px 0
+		margin 4px 0
 	
 .header-main-area .contacts__text--bold
 	font-weight 900
 	
 .header-main-area .contacts__item
 	margin-bottom 10px
+	@media screen and (max-width:600px)
+		margin 7px 0
 	
 .header-main-area .contacts__text--phone
 	font-size 2rem
@@ -102,7 +102,7 @@
 .header-main-area .contacts__text--chat
 	font-size 1.7rem
 
-.contacts__text--small
+.header-main-area .contacts__text--small
 	font-size 1.2rem
 	@media screen and (max-width:600px)
 		display none
@@ -117,6 +117,7 @@
 	background-repeat no-repeat
 	background-size cover
 	display inline-block
+	background-image url(./img/icons/icons.png)
 	@media screen and (max-width:600px)
 		display block
 		margin 0 auto
@@ -125,22 +126,19 @@
 	top 3px
 	width 22px
 	height 22px
-	transition all .2s ease-in-out
-	background-image url(./img/icons/vk.png)
+	background-position 0 -98px
 	
 .header-main-area .social__icon--tw
 	top 3px
 	width 22px
 	height 22px
-	transition all .2s ease-in-out
-	background-image url(./img/icons/tw.png)
+	background-position 0 -48px
 	
 .header-main-area .social__icon--mail
 	top 3px
 	width 25px
 	height 17px
-	transition all .2s ease-in-out
-	background-image url(./img/icons/mail.png)
+	background-position 0 -6px
 	@media screen and (max-width:600px)
 		top 0
 	
@@ -149,7 +147,6 @@
 	top -4px
 	color #FFF
 	font-size 1.6rem
-	transition all .2s ease-in-out
 	@media screen and (max-width:600px)
 		font-size 1.2rem!important
 		display block
@@ -160,17 +157,17 @@
 	&:hover .social__link
 		color #46ebd6
 	&:hover .social__icon--vk
-		background-image url(./img/icons/vk-h.png)
+		background-position 0 -124px
 	&:hover .social__icon--tw
-		background-image url(./img/icons/tw-h.png)
+		background-position 0 -74px
 	&:hover .social__icon--mail
-		background-image url(./img/icons/mail-h.png)
+		background-position 0 -31px
 		
 .header-main-area .social__link--mail
 	top -1px
 	
 .menu-area .menu--desktop
-	@media screen and (max-width:992px)
+	@media screen and (max-width:1170px)
 		display none
 	
 .menu-area .menu
@@ -186,6 +183,12 @@
 	flex-wrap wrap
 	justify-content center
 	align-items center
+	padding 0 40px
+	
+.menu--with-logentry
+	padding 0 0 0 40px!important
+	@media screen and (max-width:1170px)
+		padding 0 40px!important
 
 	
 .menu-area .menu-link, 
@@ -198,12 +201,17 @@
 	text-transform uppercase
 	font-weight 900
 	padding 20px 30px
-	transition all .2s ease-in-out
+	transition background-color .2s ease-in-out
+	background-color #FFF
 	&:hover
 		background-color #48c9b8
 	&:hover .menu__item
 		color #FFF
-		transition all .2s ease-in-out	
+		transition all .2s ease-in-out
+		
+.menu-area .menu-link--active
+	background-color #48c9b8
+	color #FFF
 		
 .menu-area .logentry
 	background-color #39393d
