--- a/client/bem_components/header/header.styl
+++ b/client/bem_components/header/header.styl
@@ -189,6 +189,9 @@
 	padding 0 0 0 40px!important
 	@media screen and (max-width:1170px)
 		padding 0 40px!important
+		
+.menu--with-logentry .menu-link
+	margin-top -1px
 
 	
 .menu-area .menu-link, 
